--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
         uses: quarto-dev/quarto-actions/render@v2
         with:
           to: html
-      - name: Quarto Preview
+      - name: Quarto Publish
         if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' }}
         uses: quarto-dev/quarto-actions/publish@v2
         with:
