Create bibliography file (#10)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,8 @@ website:
       - icon: github
         href:  https://github.com/qutip/qutip-julia-tutorials
 
+bibliography: bibliography.bib  
+
 format:
   html:
     theme:
